# robotics-runtime-infra

./: .dockerignore  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .trivyignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.amd.yaml  compose.benchmark.yaml  compose.can-observation.yaml  compose.edge-attach.yaml  compose.evidence.test.yaml  compose.evidence.yaml  compose.high-throughput.yaml  compose.intel.yaml  compose.nvidia-jetson.yaml  compose.nvidia.yaml  compose.override.yaml.example  compose.playback.yaml  compose.record.yaml  compose.rknn.yaml  compose.security.yaml  compose.serial.yaml  compose.stepped.yaml  compose.time.yaml  compose.yaml  docker-bake.hcl  foundation.repos  pytest.ini  renovate.json  requirements-dev.txt  run_local_test.sh  setup_dev_env.sh  (+1 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  cross-repo-integration.yml  foundation-integration.yml  hardware-qualification.yml  release-image.yml  rk3588-qualification.yml  update-check.yml
config/authorization/: trust-policy.example.json
config/fastdds/: datasharing-required.xml  high-throughput.xml  secure-shm.xml  shm-only.xml  udp-only.xml
config/playback/: qos-overrides.yaml
config/recording/: mcap-writer.yaml  qos-overrides.yaml
config/sros2/: observer.policy.xml  smoke.policy.xml
config/time/: chrony-command-socket.conf  chrony-fixture.conf  chrony-unsynchronized-fixture.conf  otel-chrony.yaml  otel-ptp.yaml  ptp4l.conf
config/udev/: 99-robotics-serial.rules
contracts/infra/: evidence-manifest.schema.json  evidence-manifest.v1.schema.json  infra-release.v1.schema.json  ros-graph-contract.v1.schema.json  runtime-profiles.schema.json  runtime-profiles.v1.schema.json  stack.v1.schema.json
docker/: entrypoint.sh  rknn.Dockerfile
docker/apt/: ros-snapshot-key.gpg  update-rosdep-cache  use-package-snapshots
docker/evidence-sink/: evidence-sink
docker/permit-preflight/: permit-preflight
docker/python/: acceptance-observer.in  inference-amd.in  inference-cpu.in  inference-nvidia-jetson.in  permit-preflight.in  rknn-converter.in  rknn-runtime.in
docker/rosdeps/benchmark/: package.xml
docker/rosdeps/edge/: package.xml
docker/rosdeps/sensor/: package.xml
docker/runtime/: emit-runtime-manifest
foundation/: acceptance-scenario.yaml  runtime-manifest.yaml
infra/cross-repo/: scenario-base.yaml  stack-lock.json
infra/dds/: fastdds-profile.template.xml
infra/docker/: accelerated-inference.Dockerfile  dds-agent.Dockerfile  diagnostics-runtime.Dockerfile  media-runtime.Dockerfile  ros-jazzy-mavros-gazebo.Dockerfile
infra/docker/scripts/: healthcheck.sh
infra/scripts/: allocate_domain_id.py  check_apt_versions.py  check_packages.sh  sync_contracts.py
infra/smoke/: joint_motion_smoke.sh  simulation_integration_smoke.sh
infra/smoke/launch_testing/: ros_graph_observer.py  test_cross_repo_graph_ready.py  test_integration.py  test_joint_motion.py
infra/smoke/worlds/: empty.sdf  joint_motion.sdf
infra/stack/: cross-repo-expected-graph.json  evidence-manifest.example.json  evidence-manifest.jq  infra-release.json  runtime-profiles.json  runtime-profiles.yaml  simulation-stack.json
launch/: simulation_smoke.launch.py
policy/: compose.rego  compose_test.rego  execution.rego  execution_test.rego  hardware-workflow.rego  hardware-workflow_test.rego  model-artifact.rego  model-artifact_test.rego  scenario.rego  scenario_test.rego
ros_ws/src/robotics_runtime_infra/: CMakeLists.txt  package.xml
ros_ws/src/robotics_runtime_infra/config/: joint_controllers.yaml
ros_ws/src/robotics_runtime_infra/description/: joint_motion.urdf.xacro
ros_ws/src/robotics_runtime_infra/launch/: headless.launch.py  joint_motion.launch.py
ros_ws/src/robotics_runtime_infra/test/: test_camera.py  test_clock.py  test_joint_motion.py  test_mcap.py
ros_ws/src/robotics_runtime_infra/worlds/: camera.sdf  empty.sdf
ros_ws/src/robotics_simulation_infra/: package.xml
ros_ws/src/robotics_simulation_infra/test/: test_joint_motion.py  test_mcap.py
systemd/: robotics-can-observation@.service  robotics-ptp-sample.service  robotics-ptp-sample.timer
test/acceptance/: stepped-smoke.yaml
test/fixtures/playback/: README.md
test/fixtures/playback/golden/: golden_0.mcap  metadata.yaml
test/physical/: hil-runtime.input.json
test/policy/: mock-physical-verdict.yaml  unsafe-compose.yaml
test/policy/execution/: valid.json
test/policy/model_artifact/: failed_parity.json  tampered_report.json  tampered_target.json  tensorrt.json  valid.json  wrong_compute_capability.json  wrong_hardware.json
test/provider-conformance/: test_provider.py
test/time/: pmc-unsynchronized.fixture  pmc.fixture
tests/: test_allocate_domain_id.py  test_check_apt_versions.py  test_compose_services.py
tmpfiles.d/: robotics-time.conf
