<?xml version="1.0"?>
<package format="3">
  <name>robotics_benchmark_runtime_dependencies</name>
  <version>0.8.0</version>
  <description>Runtime dependencies for the standard ROS 2 data-plane benchmark.</description>
  <maintainer email="maintainers@example.invalid">Runtime Infra Maintainers</maintainer>
  <license>MIT</license>

  <exec_depend>performance_test</exec_depend>
  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>sros2</exec_depend>
</package>
