<?xml version="1.0"?>
<package format="3">
  <name>robotics_sensor_runtime_dependencies</name>
  <version>0.8.0</version>
  <description>Portable camera and image transport dependencies for ROS 2.</description>
  <maintainer email="184955981+mmkolpakov@users.noreply.github.com">mmkolpakov</maintainer>
  <license>MIT</license>

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
</package>
